WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314564
[Site Isolation] Webpage is constantly reloaded "invalid message RemoteMediaSessionManagerProxy_RemoteAudioConfigurationChanged"
https://bugs.webkit.org/show_bug.cgi?id=314564
Summary
[Site Isolation] Webpage is constantly reloaded "invalid message RemoteMediaS...
rupin
Reported
2026-05-11 10:33:32 PDT
On Safari, on zillow.com, the page keeps reloading because "an error occurred". I have site isolation OFF but shared process for site isolation ON.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-05-11 10:33:39 PDT
<
rdar://problem/176803176
>
rupin
Comment 2
2026-05-11 10:46:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64688
EWS
Comment 3
2026-06-05 09:43:04 PDT
Committed
314640@main
(b913bf1da9bd): <
https://commits.webkit.org/314640@main
> Reviewed commits have been landed. Closing PR #64688 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug