Source/WebKit/UIProcess/Media/RemoteMediaSessionManagerProxy.h
@@ -39,6 +39,7 @@
 #include <wtf/Ref.h>
 #include <wtf/RefPtr.h>
 #include <wtf/TZoneMalloc.h>
+#include <wtf/WeakPtr.h>
 
 #if PLATFORM(IOS_FAMILY)
 #include <WebCore/MediaSessionManagerIOS.h>
@@ -59,7 +60,10 @@ namespace WebKit {
 
 class RemoteMediaSessionManagerAudioHardwareListener;
 class RemoteMediaSessionProxy;
+class WebPageProxy;
+class WebProcessProxy;
 struct RemoteMediaSessionState;
+struct SharedPreferencesForWebProcess;
 
 class RemoteMediaSessionManagerProxy
     : public WebCore::REMOTE_MEDIA_SESSION_MANAGER_BASE_CLASS
@@ -72,7 +76,7 @@ class RemoteMediaSessionManagerProxy
 public:
     USING_CAN_MAKE_WEAKPTR(MessageReceiver);
 
-    static RefPtr<RemoteMediaSessionManagerProxy> create(WebCore::PageIdentifier, WebProcessProxy&);
+    static RefPtr<RemoteMediaSessionManagerProxy> create(WebPageProxy&);
 
     virtual ~RemoteMediaSessionManagerProxy();
 
@@ -88,11 +92,10 @@ public:
 
     const Ref<WebProcessProxy> process() const { return m_process; }
 
-    void addRemoteMediaSessionManager(WebCore::PageIdentifier);
-    void removeRemoteMediaSessionManager(WebCore::PageIdentifier);
-
 private:
-    RemoteMediaSessionManagerProxy(WebCore::PageIdentifier, WebProcessProxy&);
+    friend class RemotePageMediaSessionManagerProxy;
+
+    RemoteMediaSessionManagerProxy(WebPageProxy&);
 
     // Messages
     void addMediaSession(RemoteMediaSessionState&&);
@@ -139,7 +142,6 @@ private:
     CategoryType categoryOverride() const final  { return m_audioConfiguration.categoryOverride; }
 #endif
 
-    void forEachRemoteSessionManager(NOESCAPE const Function<void(WebCore::PageIdentifier)>&);
     RefPtr<WebCore::PlatformMediaSessionInterface> findAndUpdateSession(RemoteMediaSessionState&);
     Ref<RemoteMediaSessionManagerAudioHardwareListener> ensureAudioHardwareListenerProxy(WebCore::AudioHardwareListener::Client&);
 
@@ -155,10 +157,10 @@ private:
     ASCIILiteral logClassName() const final;
 #endif
 
+    WeakPtr<WebPageProxy> m_page;
+    WebCore::PageIdentifier m_pageID;
     const Ref<WebProcessProxy> m_process;
-    WebCore::PageIdentifier m_localPageID;
     HashMap<WebCore::MediaSessionIdentifier, Ref<RemoteMediaSessionProxy>> m_sessionProxies;
-    HashSet<WebCore::PageIdentifier> m_remoteSessionManagerPages;
 
 #if PLATFORM(COCOA)
     RefPtr<RemoteMediaSessionManagerAudioHardwareListener> m_audioHardwareListenerProxy;
